--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,14 +54,20 @@
      <Compile Include="Assets\scripts\Ball.cs" />
      <Compile Include="Assets\scripts\Block.cs" />
      <Compile Include="Assets\scripts\DeadZone.cs" />
+     <Compile Include="Assets\scripts\EscapeHandler.cs" />
+     <Compile Include="Assets\scripts\GameManager.cs" />
+     <Compile Include="Assets\scripts\LevelGenerator.cs" />
+     <Compile Include="Assets\scripts\LevelMenu.cs" />
      <Compile Include="Assets\scripts\Paddle.cs" />
      <None Include="Assets\sprites\uipack_fixed\Spritesheet\greenSheet.xml" />
      <None Include="Assets\sprites\uipack_fixed\Spritesheet\yellowSheet.xml" />
      <None Include="Assets\sprites\uipack_fixed\Spritesheet\blueSheet.xml" />
+     <None Include="Assets\levels\first_level.txt" />
      <None Include="Assets\sprites\puzzlepack\readme.txt" />
      <None Include="Assets\sprites\uipack_fixed\Spritesheet\redSheet.xml" />
      <None Include="Assets\sprites\uipack_fixed\Spritesheet\greySheet.xml" />
      <None Include="Assets\sprites\uipack_fixed\license.txt" />
+     <None Include="Assets\levels\second_level.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/IT/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
